Fixes nav z-index

--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -1,5 +1,6 @@
 nav {
   font-family: "Fontspring";
+  z-index: 9;
 }
 
 #darklight-1 {
